# tiny-llama-from-scratch

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
src/: main.py
