[tool.poetry]
name = "tiny-llama-from-scratch"
version = "0.1.0"
description = "Tiny LLaMa implemented from scratch using PyTorch and Polars."
authors = ["danczw <dev.dc@pm.me>"]
license = "Apache License 2.0"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.18.13"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
PyYAML = "^6.0.1"
torch = {version = "^2.0.1", source = "torch_cpu"}

[tool.poetry.dev-dependencies]
ruff = "^0.0.284"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
